--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-Flask
-pandas
-matplotlib
-numpy
+# This file is for pip install
+Flask==2.3.3
+pandas==2.0.3
+matplotlib==3.7.2
+seaborn==0.12.2
+scipy==1.11.2
+numpy==1.24.3
+gunicorn==21.2.0
